your update message

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -33,6 +33,10 @@
   }
 </style>
 <body>
+<style>:root{--accent:#FF4500;--accent-opaque:rgba(255,69,0,0.10);--accent-opaque-strong:rgba(255,69,0,0.40);--accent-border:rgba(255,69,0,0.25);--accent-grad1:#FF5722;--accent-grad2:#FF8C00} .logo span,.hero-text h1 span,h2 span,.stat h3{color:var(--accent)} .badge,.primary,.plan-btn,.price-btn{background:var(--accent);color:#fff} .nav-links li a:hover{background:var(--accent);color:#fff} .burger span{background-color:var(--accent)} .hero-tags span{background:var(--accent-opaque);border:1px solid var(--accent-border)} .stat{background:var(--accent-opaque);border:1px solid var(--accent-border)} .icon{background:linear-gradient(135deg,var(--accent-grad1),var(--accent-grad2));color:#fff} .primary:hover{box-shadow:0 6px 15px rgba(255,69,0,0.5)} .feature-card:hover{border:1px solid var(--accent)} </style>
+
+
+
 <header class="hero">
   <nav class="navbar">
     <div class="logo">
@@ -238,17 +242,17 @@
 </p>
   <div class="review-grid">
     <div class="review">
-      <div class="stars" >★★★★★</div>
+      <div class="stars" >â˜…â˜…â˜…â˜…â˜…</div>
       <p>Sports streams are smooth and 4K looks amazing.</p>
       <small>Android TV</small>
     </div>
     <div class="review">
-      <div class="stars">★★★★★</div>
+      <div class="stars">â˜…â˜…â˜…â˜…â˜…</div>
       <p>Support replies fast. Setup was easy.</p>
       <small>Firestick</small>
     </div>
     <div class="review">
-      <div class="stars">★★★★★</div>
+      <div class="stars">â˜…â˜…â˜…â˜…â˜…</div>
       <p>Big VOD library and clean EPG.</p>
       <small>iOS + Smart TV</small>
     </div>
@@ -895,6 +899,9 @@ ul.check li::before {
 <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
 
 
