--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -279,17 +279,17 @@ a{color:#FF4500!important}
 </p>
   <div class="review-grid">
     <div class="review">
-      <div class="stars" >â˜…â˜…â˜…â˜…â˜…</div>
+      <div class="stars" > ????? </div>
       <p>Sports streams are smooth and 4K looks amazing.</p>
       <small>Android TV</small>
     </div>
     <div class="review">
-      <div class="stars">â˜…â˜…â˜…â˜…â˜…</div>
+      <div class="stars"> ????? </div>
       <p>Support replies fast. Setup was easy.</p>
       <small>Firestick</small>
     </div>
     <div class="review">
-      <div class="stars">â˜…â˜…â˜…â˜…â˜…</div>
+      <div class="stars"> ????? </div>
       <p>Big VOD library and clean EPG.</p>
       <small>iOS + Smart TV</small>
     </div>
@@ -350,7 +350,7 @@ a{color:#FF4500!important}
     <p>One Dion_stream account can follow you everywhere: TV, laptop, phone, tablet and more ? any device that supports an IPTV player.</p>
     
     <div class="device-image-wrapper">
-       <img src="image/111.jpeg" alt="Dion_stream on multiple devices">
+       <img src="image/iccon 1.png" alt="Dion_stream on multiple devices">
     </div>
   </div>
 </section>
@@ -721,18 +721,20 @@ ul.check li::before {
 }
 
 .device-selector button {
-  background: #1a2a2d;
-  border: 1px solid #2d3748;
-  color: white;
+  background: #ffffff;
+  border: 2px solid #ff0000;
+  color: #ff0000;
   padding: 8px 18px;
   border-radius: 20px;
   cursor: pointer;
   transition: 0.3s;
+  font-weight: 600;
 }
 
 .device-selector button.active {
-  background: #00ffcc;
-  color: #000;
+  background: #ff0000;
+  color: #ffffff;
+  border: 2px solid #ff0000;
 }
 
 /* Pricing Grid */
@@ -746,8 +748,8 @@ ul.check li::before {
 
 .price-card {
   background: linear-gradient(145deg, #0a1f22, #05161a);
-  border: 1px solid rgba(0, 255, 204, 0.15);
-  border-radius: 12px;
+  border: 2px solid #ff0000;
+  border-radius: 20px;
   padding: 40px 25px;
   text-align: left;
   display: flex;
@@ -793,21 +795,21 @@ ul.check li::before {
 
 /* Buttons with Neon Glow */
 .cta-pill, .order-btn {
-  background: linear-gradient(90deg, #00d2ff, #00ffcc);
+  background: #ff0000;
   border: none;
-  color: #000;
+  color: #ffffff;
   padding: 14px 24px;
   border-radius: 30px;
   font-weight: 700;
   cursor: pointer;
   text-transform: capitalize;
-  box-shadow: 0 4px 15px rgba(0, 255, 204, 0.3);
+  box-shadow: 0 4px 15px rgba(255, 0, 0, 0.3);
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .order-btn:hover, .cta-pill:hover {
   transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(0, 255, 204, 0.5);
+  box-shadow: 0 6px 20px rgba(255, 0, 0, 0.5);
 }
 
 .center-btn-wrapper {
@@ -936,6 +938,8 @@ ul.check li::before {
 <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
