--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ a{color:#FF4500!important}
           <li>Sports, PPV & EPG Included</li>
           <li>Instant Activation</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 1 Device / 3 Months</h3>
@@ -477,7 +477,7 @@ a{color:#FF4500!important}
           <li>Full VOD & sports catalog</li>
           <li>Reliable daily streaming</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 1 Device / 6 Months</h3>
@@ -487,7 +487,7 @@ a{color:#FF4500!important}
           <li>All live + VOD content included</li>
           <li>Priority help if you need it</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card highlight-card">
         <h3>Dion_stream ? 1 Device / 14 Months</h3>
@@ -497,7 +497,7 @@ a{color:#FF4500!important}
           <li>EPG, sports and VOD for 14 months</li>
           <li>Ideal for daily viewing</li>
         </ul>
-        <button class="order-btn annual" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
+        <button class="order-btn annual" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
       </div>
     </div>
   </div>
@@ -512,7 +512,7 @@ a{color:#FF4500!important}
           <li>Ideal for living room + bedroom</li>
           <li>Immediate activation after payment</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 2 Devices / 3 Months</h3>
@@ -522,7 +522,7 @@ a{color:#FF4500!important}
           <li>EPG & sports packages included</li>
           <li>Stable streaming across both devices</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 2 Devices / 6 Months</h3>
@@ -532,7 +532,7 @@ a{color:#FF4500!important}
           <li>Full Dion_stream library access</li>
           <li>Reliable uptime and 24/7 support</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card highlight-card">
         <h3>Dion_stream ? 2 Devices / 14 Months</h3>
@@ -542,7 +542,7 @@ a{color:#FF4500!important}
           <li>Great for families or roommates</li>
           <li>Everything unlocked for the full term</li>
         </ul>
-        <button class="order-btn annual" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
+        <button class="order-btn annual" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
       </div>
     </div>
   </div>
@@ -557,7 +557,7 @@ a{color:#FF4500!important}
           <li>Strong short-term family option</li>
           <li>Includes sports, VOD and live TV</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 3 Devices / 3 Months</h3>
@@ -567,7 +567,7 @@ a{color:#FF4500!important}
           <li>Great for busy households</li>
           <li>Full access to all Dion_stream sections</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card">
         <h3>Dion_stream ? 3 Devices / 6 Months</h3>
@@ -577,7 +577,7 @@ a{color:#FF4500!important}
           <li>Thousands of channels & VOD</li>
           <li>Priority troubleshooting if needed</li>
         </ul>
-        <button class="order-btn" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
+        <button class="order-btn" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20IPTV%20Subscription'">Order Dion_stream</button>
       </div>
       <div class="price-card highlight-card">
         <h3>Dion_stream ? 3 Devices / 14 Months</h3>
@@ -587,7 +587,7 @@ a{color:#FF4500!important}
           <li>Up to three devices in parallel</li>
           <li>Stress-free streaming all year</li>
         </ul>
-        <button class="order-btn annual" onclick="window.location.href='mailto:Ultra4KStream1@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
+        <button class="order-btn annual" onclick="window.location.href='mailto:dionstream21@gmail.com?subject=Order%20Dion_stream%20Annual%20Plan'">Go Annual with Dion_stream</button>
       </div>
     </div>
   </div>
